domain/id_macros/tests/ui/direct-derive.stderr
error: #[id] injects derives automatically; remove any #[derive(...)] or cfg_attr(..., derive(...)) on this struct
 --> tests/ui/direct-derive.rs:5:12
  |
5 | pub struct DirectDeriveId;
  |            ^^^^^^^^^^^^^^
