domain/id_macros/tests/ui/direct-derive.rs
use id_macros::id;

#[id]
#[derive(Clone)]
pub struct DirectDeriveId;

fn main() {}
